updated script references to minified files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Playground Basic Engine Example</title>
     <link rel="stylesheet" href="http://playground.qlik.com/css/playground.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/node_modules/playground-js-api/dist/playground-ui.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="/node_modules/playground-js-api/dist/playground-ui.min.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="/resources/styles.css"/>
   </head>
   <body>
@@ -16,6 +16,7 @@
           <h1>Playground Basic Engine Example</h1>
           <p>
             This example will create a qSocks connection to the selected data source and then log the Global and App objects to the console. Inside the 'ConnectOpenApp' promise you can work with the Engine API.
+            For further documentation on qSocks click <a href="http://branch.qlik.com/#!/project/56728f52d1e497241ae697ca" target="_blank">here</a>
           </p>
         </div>
     </div>
@@ -23,8 +24,8 @@
 
     <script type="text/javascript" src="/node_modules/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="/node_modules/qsocks/qsocks.bundle.js"></script>
-    <script type="text/javascript" src="/node_modules/playground-js-api/dist/playground-js-api.js"></script>
-    <script type="text/javascript" src="/node_modules/playground-js-api/dist/playground-ui.js"></script>
+    <script type="text/javascript" src="/node_modules/playground-js-api/dist/playground-js-api.min.js"></script>
+    <script type="text/javascript" src="/node_modules/playground-js-api/dist/playground-ui.min.js"></script>
     <script type="text/javascript" src="/resources/script.js"></script>
   </body>
 </html>
